tests/warnings/unused/unused-param.expect
---CODE---
1
---STDERR---
error: unused invocation: output ports on invocation never used
    ┌─ ./primitives/reshape.fil:134:7
    │
134 │       red := new ConcatBundle[W, N-1, L]<'G>(in{1..N});
    │       ^^^ invocation defined here

error: unused invocation: output ports on invocation never used
    ┌─ ./primitives/reshape.fil:154:7
    │
154 │       rem := new Slice[W*N, W*(N-1)-1, 0]<'G, 'G+L>(in);
    │       ^^^ invocation defined here

error: unused invocation: output ports on invocation never used
  ┌─ tests/warnings/unused/unused-param.fil:7:3
  │
7 │   const1 := new Const[USED, 1]<'G>();
  │   ^^^^^^ invocation defined here

error: unused parameter: parameter is defined but never used
  ┌─ tests/warnings/unused/unused-param.fil:4:7
  │
4 │   let UNUSED = 42;
  │       ^^^^^^ parameter defined here

Compilation failed with 4 errors.
Run with --show-models to generate assignments for failing constraints.
